--- a/styles.css
+++ b/styles.css
@@ -49,15 +49,146 @@ footer {
     overflow: hidden;
     position: relative;
 }
-.carousel{
+
+.carousel {
     display: flex;
     transition: transform 0.5s;
 }
-.carousel-slide{
+
+.carousel-slide {
     flex: 0 0 100%;
 }
 
-.carousel img{
+.carousel img {
     width: 100%;
     height: auto;
+}
+
+/*karusel start*/
+.carousel {
+    position: relative;
+    width: 100%;
+    height: 800px;
+    margin: 0 auto;
+    overflow: hidden;
+}
+
+.carousel-item {
+    position: absolute;
+    width: 100%;
+    height: 100%;
+    opacity: 0;
+    transition: opacity 0.5s;
+}
+
+.carousel-item img {
+    width: 100%;
+    height: 100%;
+    object-fit: cover;
+}
+
+
+.caption {
+    position: absolute;
+    bottom: 0;
+    left: 0;
+    width: 100%;
+    padding: 10px;
+    background-color: rgba(0, 0, 0, 0.5);
+    color: white;
+    font-size: 20px;
+}
+
+.prev, .next {
+    position: absolute;
+    top: 50%;
+    transform: translateY(-50%);
+    width: 50px;
+    height: 50px;
+    border: none;
+    background-color: rgba(0, 0, 0, 0.5);
+    color: white;
+    font-size: 30px;
+    cursor: pointer;
+}
+
+.prev {
+    left: 0;
+}
+
+.next {
+    right: 0;
+}
+
+.carousel-item.active {
+    opacity: 1;
+}
+
+/*button*/
+.my-button {
+    display: inline-block;
+    padding: 15px 30px;
+    font-size: 40px;
+    text-align: center;
+    text-decoration: none;
+    color: #ffffff;
+    background-color: #6b9cc9;
+    border-radius: 6px;
+    border: none;
+    transition: background-color 0.3s ease;
+}
+
+.my-button:hover {
+    background-color: #0056b3;
+}
+
+.order-container {
+    display: flex;
+    justify-content: center;
+    align-items: center;
+}
+
+/*footer start*/
+
+footer {
+    width: 100%;
+    background-color: #242424;
+    color: #ffffff;
+    text-align: center;
+    padding: 30px 0;
+}
+
+.footer-content {
+    max-width: 500px;
+    margin: 0 auto;
+    padding: 0 20px;
+}
+
+.footer-content h3 {
+    margin-bottom: 30px;
+}
+
+.footer-content p {
+    margin-bottom: 30px;
+}
+
+.social {
+    list-style: none;
+    padding: 0;
+    margin: 0;
+    display: flex;
+    justify-content: center;
+    margin-bottom: 30px;
+}
+
+.social li {
+    margin: 0 10px;
+}
+
+.social li a{
+   color: aqua;
+}
+
+.footer-bottom p {
+    margin: 0;
 }
